<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <TextView
            android:id="@+id/textView_card_plan_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_preview_subscription_plan_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_card_plan_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_preview_advertisement_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_card_plan_name" />

        <TextView
            android:id="@+id/textView_card_plan_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_preview_subscription_plan_duration"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_card_plan_description" />

        <TextView
            android:id="@+id/textView_card_plan_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_preview_subscription_plan_price_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_card_plan_duration" />

        <Button
            android:id="@+id/button_card_plan_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_purchase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>