<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context=".ui.main.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="12dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="80dp"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp">

            <ImageView
                android:id="@+id/imageView_profile_logo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/description_profile_logo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_profile" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView_profile_store_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/text_preview_profile_store_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_chevron_right"
            app:drawableTint="@color/black" />

    </LinearLayout>

    <View
        style="@style/divider_profile_style"
        android:layout_marginStart="112dp" />

    <TextView
        android:id="@+id/textView_profile_store_photo"
        style="@style/textView_profile_style"
        android:layout_marginTop="60dp"
        android:text="@string/text_preview_profile_store_photo"
        app:drawableEndCompat="@drawable/ic_chevron_right"
        app:drawableTint="@color/black" />

    <View style="@style/divider_profile_style" />

    <TextView
        android:id="@+id/textView_profile_change_email"
        style="@style/textView_profile_style"
        android:paddingTop="12dp"
        android:text="@string/text_preview_profile_change_email"
        app:drawableEndCompat="@drawable/ic_chevron_right"
        app:drawableTint="@color/black" />

    <View style="@style/divider_profile_style" />

    <TextView
        android:id="@+id/textView_profile_reset_password"
        style="@style/textView_profile_style"
        android:paddingTop="12dp"
        android:text="@string/text_preview_profile_reset_password"
        app:drawableEndCompat="@drawable/ic_chevron_right"
        app:drawableTint="@color/black" />

    <View style="@style/divider_profile_style" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_profile_account_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/textView_profile_account_verification"
            style="@style/textView_profile_style"
            android:layout_width="0dp"
            android:layout_gravity="bottom"
            android:text="@string/text_preview_profile_account_verification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textView_profile_account_verification_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_profile_account_verification_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_preview_profile_account_verification_status"
            app:drawableEndCompat="@drawable/ic_chevron_right"
            app:drawableTint="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@id/textView_profile_account_verification"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View style="@style/divider_profile_style" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_profile_logout"
            style="@style/textView_profile_style"
            android:layout_above="@id/divider_profile_logout"
            android:text="@string/text_preview_profile_logout"
            app:drawableEndCompat="@drawable/ic_chevron_right"
            app:drawableTint="@color/black" />

        <View
            android:id="@+id/divider_profile_logout"
            style="@style/divider_profile_style"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp" />

    </RelativeLayout>

</LinearLayout>