<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_centerVertical="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView_decrease_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_left_chevron"
        android:src="@drawable/ic_chevron_left"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView_statistic_selected_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_preview_statistic_date_filter"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/imageView_increase_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_right_chevron"
        android:src="@drawable/ic_chevron_right"
        app:tint="@color/white" />
</LinearLayout>