<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/textView_subscription_list_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_format_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_subscription_list_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/text_preview_subscription_plan_name"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_subscription_list_date"
        app:layout_constraintEnd_toStartOf="@id/textView_subscription_list_price"
        app:layout_constraintStart_toEndOf="@id/textView_subscription_list_date" />

    <TextView
        android:id="@+id/textView_subscription_list_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_preview_subscription_plan_price_placeholder"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_subscription_list_name"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>